--- a/index.html
+++ b/index.html
@@ -1,24 +1,33 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
-        <link rel="stylesheet" href="./styles/style.css">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
-        <script defer src="./scripts/script.js"></script>
+    <link rel="stylesheet" href="./styles/style.css">
 
-        <title>Snake Game</title>
-    </head>
-    <body>
-        <h1>Snake Game!</h1>
-        <canvas id="snake" width="512" height="512"></canvas>
+    <script defer src="./scripts/script.js"></script>
 
-        <footer>
-            <p>Recriando o jogo da cobrinha com JavaScript - <a target="_blank" href="https://digitalinnovation.one/" rel="noopener noreferrer">Digital Innovation One</a></p>
-            <p>Repositório <a target="_blank" href="https://github.com/Pleiterson/snake-game-javascript" rel="noopener noreferrer"> GitHub </a>deste projeto</p><br>
-            <p>Desenvolvido por <a target="_blank" href="https://pleiterson.vercel.app/" rel="noopener noreferrer">Pleiterson Amorim</a></p>
-        </footer>
-    </body>
+    <title>Snake Game</title>
+</head>
+
+<body>
+    <audio src="./audioblocks-simple-8bit-game-loop.mp3" autoplay loop></audio>
+    <h1>Snake Game!</h1>
+    <canvas id="snake" width="512" height="512"></canvas>
+    <h3>YOUR SCORE : <span id="score">0</span></h3>
+    <div id="bb"></div>
+    <button id="btn-how">How to play?</button>
+    <footer>
+        <p>
+            <a target="_blank"
+                href="https://github.com/HanDaWoon/snake-game-javascript"
+                rel="noopener noreferrer"> GitHub </a>프로젝트 주소입니다.
+        </p>
+        <br>
+    </footer>
+</body>
+
 </html>
