--- a/index.html
+++ b/index.html
@@ -19,7 +19,10 @@
     <canvas id="snake" width="512" height="512"></canvas>
     <h3>YOUR SCORE : <span id="score">0</span></h3>
     <div id="bb"></div>
-    <button id="btn-how">How to play?</button>
+    <div>
+        <button id="btn-how">How to play?</button>
+        <button id="btn-score">View score</button>
+    </div>
     <footer>
         <p>
             <a target="_blank"
